simple/vllm-mock/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-mock
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: vllm-mock
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    #nodePort: 30080 # 指定端口，范围 30000-32767；如果不指定会随机分配
